# tmplt

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: CICD.yml
completions/: _tmplt  _tmplt.ps1  tmplt.bash  tmplt.fish
docs/: build_from_source.md  project_layout.md  usage.md
man/: tmplt.1
src/: cli.rs  command.rs  error_macro.rs  main.rs  parser.rs  progress_bar.rs  utils.rs  version.rs
