[package]
name = "tmplt"
version = "0.1.1"
rust-version = "1.64.0"
description = "tmplt is a command-line interface tool that allows you to quickly and easily set up project templates for various programming languages and frameworks"
edition = "2021"
authors = ["Humble Penguin <humblepenguinoffical@gmail.com>"]
repository = "https://github.com/humblepenguinn/tmplt/"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.20", features = ["serde"] }
clap = { version = "4.1.12", features = ["derive"] }
colored = "2.0.0"
dirs = "5.0.0"
indicatif = "0.17.3"
inquire = "0.6.0"
semver = "1.0.17"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.19"
tokio = "1.27.0"
url = "2.3.1"

[dependencies.reqwest]
version = "0.11.16"
default-features = false
features = ["rustls-tls-native-roots"]

[build-dependencies]
chrono = "0.4.20"
clap = { version = "4.1.12", features = ["derive"] }
clap_mangen = "0.2.9"
clap_complete = "4.3.0"
